--- a/OverParse/MainWindow.xaml
+++ b/OverParse/MainWindow.xaml
@@ -93,7 +93,7 @@
     </Window.Resources>
 
     <Border BorderBrush="#FF888888" BorderThickness="1">
-        <Grid HorizontalAlignment="Stretch" Margin="0,0,0,0">
+        <Grid HorizontalAlignment="Stretch" Margin="0,0,0,0" VirtualizingPanel.IsVirtualizing="True" VirtualizingPanel.IsContainerVirtualizable="True" VirtualizingPanel.VirtualizationMode="Recycling">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
                 <RowDefinition />
@@ -294,7 +294,7 @@
 
             <Grid Visibility="Hidden" Grid.Row="1" Margin="0" Grid.RowSpan="2">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition x:Name="NameHC" Width="1.2*"/>
+                    <ColumnDefinition x:Name="NameHC" Width="1*"/>
                     <ColumnDefinition x:Name="PercentHC" Width="28"/>
                     <ColumnDefinition x:Name="DmgHC" Width="72"/>
                     <ColumnDefinition x:Name="DmgDHC" Width="52" />
@@ -302,7 +302,7 @@
                     <ColumnDefinition x:Name="JAHC" Width="44"/>
                     <ColumnDefinition x:Name="CriHC" Width="44"/>
                     <ColumnDefinition x:Name="MdmgHC" Width="50"/>
-                    <ColumnDefinition x:Name="AtkHC" Width="1.5*"/>
+                    <ColumnDefinition x:Name="AtkHC" Width="1.7*"/>
                 </Grid.ColumnDefinitions>
                 <Grid Grid.Column="0" x:Name="NameH" />
                 <Grid Grid.Column="1" x:Name="PercentH" />
@@ -316,7 +316,7 @@
             </Grid>
 
             <Rectangle x:Name="EncounterIndicator" Grid.Row="2" Height="2" VerticalAlignment="Top"  Fill="White" IsHitTestVisible="False" />
-            <Label x:Name="EncounterStatus" Grid.Row="2" MinHeight="15" Foreground="White" Padding="5,0,0,0" FontSize="12" FontFamily="Noto Sans CJK JP DemiLight" IsHitTestVisible="False" />
+            <Label x:Name="EncounterStatus" Grid.Row="2" MinHeight="16" Foreground="White" Padding="2,2,0,0" FontSize="12" FontFamily="Noto Sans CJK JP DemiLight" IsHitTestVisible="False" />
         </Grid>
     </Border>
 </Window>
