--- a/OverParse/SelectColumn.xaml
+++ b/OverParse/SelectColumn.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         ResizeMode="NoResize"
         WindowStartupLocation="CenterOwner"
-        Title="SelectColumn" Height="270" Width="300">
+        Title="Select Columns" Height="270" Width="300">
     <Grid>
         <CheckBox x:Name="PlayerName" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="5,5,0,0" />
         <Label Content="Name" VerticalAlignment="Top" HorizontalAlignment="Left" Padding="0" Margin="26,5,0,0" />
@@ -28,7 +28,7 @@
         <CheckBox x:Name="AtkName" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="5,165,0,0" />
         <Label Content="Attack Name" VerticalAlignment="Top" HorizontalAlignment="Left" Padding="0" Margin="26,165,0,0" />
         <CheckBox x:Name="Variable" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="5,185,0,0" />
-        <Label Content="Variable Columns" VerticalAlignment="Top" HorizontalAlignment="Left" Padding="0" Margin="26,185,0,0" />
+        <Label Content="Responsive Columns" VerticalAlignment="Top" HorizontalAlignment="Left" Padding="0" Margin="26,185,0,0" />
 
         <Button Content="OK" Click="OK_Click" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,10,10,0" Width="50" Height="30"/>
     </Grid>
